webpack-Konfiguration anpassen, damit keine führenden Slashes an die Asset-Pfade angehängt werden
auch im quelltext /images ersetzen

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Lalumo - Musik lernen durch Hören und Spielen">
     <meta property="og:description" content="Interaktive Musiklernen-App mit Gehörbildung, Tonhöhen und Akkord-Training">
-    <meta property="og:image" content="https://lalumo.eu/images/mascot.png">
+    <meta property="og:image" content="https://lalumo.eu/images/logo_bird_sings.jpg">
     <meta property="og:url" content="https://lalumo.eu">
     <meta property="og:type" content="website">
     
