fix api base url online

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,8 @@
     .mascot-welcome { display: flex; align-items: center; margin: 10px 0; }
   </style>
   <!-- Scripts and more styles will be injected by webpack -->
+  <!-- Cache busting wird durch webpack erledigt -->
+  
 </head>
 <body>
   <!-- app.js -->
