--- a/src/index.html
+++ b/src/index.html
@@ -770,7 +770,7 @@
             </button>
           </div>
           
-          <button id="play-chord-2_5" @click="playCurrentChord()" class="play-button" :title="$store.strings?.play_chord || 'Play Chord'">▶️</button>
+          <button id="play-chord-2_5" @click="playCurrent2_5Chord()" class="play-button" :title="$store.strings?.play_chord || 'Play Chord'">▶️</button>
 
           <div class="chords-container">            
             <!-- Progress display -->
