feat: add anonymized IP and device tracking to referral system

--- a/homepage/datenschutz.html
+++ b/homepage/datenschutz.html
@@ -146,7 +146,21 @@
 
             <h2>6. Datenspeicherung in der App</h2>
             <p>
-                Die Lalumo-App speichert Ihre Lernfortschritte und Einstellungen lokal auf Ihrem Gerät. Diese Daten werden nicht an unsere Server übertragen, es sei denn, Sie nutzen explizit Funktionen, die eine Datenübertragung erfordern (z.B. Cloud-Backup).
+                Die Lalumo-App speichert Ihre Lernfortschritte und Einstellungen lokal auf Ihrem Gerät. Diese Daten werden nicht an unsere Server übertragen, es sei denn, Sie nutzen explizit Funktionen, die eine Datenübertragung erfordern.
+            </p>
+            
+            <h3>6.1 Referral-System</h3>
+            <p>
+                Wenn Sie das Referral-System von Lalumo nutzen, werden folgende anonymisierte Daten gespeichert:
+            </p>
+            <ul>
+                <li>Ein nicht umkehrbarer Hash Ihrer IP-Adresse (keine Rückschlüsse auf Ihre tatsächliche IP möglich)</li>
+                <li>Grundlegende Geräteinformationen (Art des Geräts und Browser, z.B. "Android Chrome" oder "iPhone Safari")</li>
+                <li>Ihr anonymer Benutzername</li>
+                <li>Zeitpunkt der Registrierung</li>
+            </ul>
+            <p>
+                Diese Daten werden ausschließlich verwendet, um das Referral-System zu betreiben und Missbrauch zu verhindern. Die Speicherung erfolgt in pseudonymisierter Form, ohne dass eine Zuordnung zu Ihrer tatsächlichen Identität möglich ist. Sie können jederzeit die Löschung Ihrer Daten verlangen.
             </p>
 
             <h2>7. Ihre Rechte</h2>
