add share button with translations and update company details in imprint
rename menu items and translate to german

referrals unlocked chords in green

settings all in german

Referrals Page Strings

--- a/homepage/impressum.html
+++ b/homepage/impressum.html
@@ -101,11 +101,14 @@
             <h2>Angaben gemäß § 5 TMG</h2>
             <div class="contact-info">
                 <p>
-                    <strong>Lalumo Music Learning</strong><br>
-                    [Ihr Name/Firmenname]<br>
-                    [Straße und Hausnummer]<br>
-                    [PLZ und Ort]<br>
+                    <strong>Lalumo App - Musik lernen für Kinder</strong><br>
+                    Ruben Barkow-Kuder<br>
+                    Knickweg 16<br>
+                    24114 Kiel<br>
                     Deutschland
+                </p>
+                <p>
+                    <a href="mailto:lalumo-support@it.z11.de">lalumo-support@it.z11.de</a>
                 </p>
             </div>
 
