homepage: update legal documents with company information and contact details

--- a/homepage/agb.html
+++ b/homepage/agb.html
@@ -110,13 +110,13 @@
                 Vertragspartner für die Nutzung der App und der Website ist:
             </p>
             <p>
-                [Ihr Name/Firmenname]<br>
-                [Straße und Hausnummer]<br>
-                [PLZ und Ort]<br>
+                Ruben Barkow-Kuder<br>
+                Knickweg 16<br>
+                24114 Kiel<br>
                 Deutschland<br>
-                <br>
-                E-Mail: support@lalumo.eu<br>
-                Telefon: [Telefonnummer]
+            </p>
+            <p>
+                <a href="mailto:lalumo-support@it.z11.de">lalumo-support@it.z11.de</a>
             </p>
 
             <h2>3. Leistungsbeschreibung</h2>
