--- a/homepage/datenschutz.html
+++ b/homepage/datenschutz.html
@@ -107,19 +107,19 @@
 
             <h2>2. Verantwortlicher</h2>
             <p>
-                [Ihr Name/Firmenname]<br>
-                [Straße und Hausnummer]<br>
-                [PLZ und Ort]<br>
-                Deutschland<br>
+                Ruben Barkow-Kuder<br>
+                    Knickweg 16<br>
+                    24114 Kiel<br>
+                    Deutschland
                 <br>
-                E-Mail: support@lalumo.eu<br>
-                Telefon: [Telefonnummer]
+                <a href="mailto:lalumo-support@it.z11.de">lalumo-support@it.z11.de</a><br>
+                    Tel: Kiel-53687223
             </p>
 
             <h2>3. Arten der verarbeiteten Daten</h2>
             <ul>
-                <li>Bestandsdaten (z.B. Namen, Adressen)</li>
-                <li>Kontaktdaten (z.B. E-Mail, Telefonnummern)</li>
+                <li>Bestandsdaten (gegebenenfalls z.B. Namen, Adressen)</li>
+                <li>Kontaktdaten (gegebenenfalls z.B. E-Mail, Telefonnummern)</li>
                 <li>Nutzungsdaten (z.B. besuchte Webseiten, Interesse an Inhalten, Zugriffszeiten)</li>
                 <li>Meta-/Kommunikationsdaten (z.B. Geräte-Informationen, IP-Adressen)</li>
                 <li>Lernfortschritte und Nutzungsstatistiken innerhalb der App</li>
@@ -186,7 +186,7 @@
 
             <h2>9. Fragen zum Datenschutz</h2>
             <p>
-                Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail an support@lalumo.eu.
+                Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail an lalumo-support@it.z11.de.
             </p>
 
             <p style="margin-top: 3rem; font-style: italic; color: var(--text-light);">
