--- a/homepage/impressum.html
+++ b/homepage/impressum.html
@@ -107,26 +107,27 @@
                     24114 Kiel<br>
                     Deutschland
                 </p>
-                <p>
-                    <a href="mailto:lalumo-support@it.z11.de">lalumo-support@it.z11.de</a>
-                </p>
             </div>
 
             <h2>Kontakt</h2>
             <p>
-                <strong>E-Mail:</strong> support@lalumo.eu<br>
-                <strong>Telefon:</strong> [Telefonnummer]
+                <a href="mailto:lalumo-support@it.z11.de">lalumo-support@it.z11.de</a><br>
+                    Tel: Kiel-53687223
             </p>
 
             <h2>Umsatzsteuer-ID</h2>
             <p>
                 Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>
-                [USt-IdNr.]
+                Steuernummer: 19 222 22158<br>
+USt- IdNr: DE235640206
             </p>
 
             <h2>Redaktionell verantwortlich</h2>
             <p>
-                [Name und Anschrift der verantwortlichen Person]
+                Ruben Barkow-Kuder<br>
+                    Knickweg 16<br>
+                    24114 Kiel<br>
+                    Deutschland
             </p>
 
             <h2>Haftung für Inhalte</h2>
