--- a/homepage/index.html
+++ b/homepage/index.html
@@ -522,7 +522,7 @@
                 <a href="https://f-droid.org/packages/com.lalumo.app">F-Droid</a>
             </div>
             <div class="footer-links">
-                <a href="mailto:support@lalumo.eu" class="footer-link">Kontakt</a>
+                <a href="mailto:lalumo-support@it.z11.de" class="footer-link">Kontakt</a>
             </div>
             
             <div class="footer-copyright">
