Homepage in english and german, fixed app images

--- a/homepage/index-template.html
+++ b/homepage/index-template.html
@@ -423,7 +423,7 @@
             
             <div class="download-buttons">
                 <a href="#" class="download-btn coming-soon">
-                    🍎 App Store
+                    🍎 App Store &nbsp;
                     <small lang="en" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Coming soon</small>
                     <small lang="de" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Bald verfügbar</small>
                 </a>
@@ -431,7 +431,9 @@
                     🤖 Google Play Store
                 </a>
                 <a href="https://f-droid.org/packages/com.lalumo.app" class="download-btn">
-                    <img src="https://fdroid.gitlab.io/artwork/badge/get-it-on.png" alt="F-Droid" style="height: 20px; margin-right: 6px; vertical-align: middle;">F-Droid
+                    <img src="https://fdroid.gitlab.io/artwork/badge/get-it-on.png" alt="F-Droid" style="height: 20px; margin-right: 6px; vertical-align: middle;">F-Droid&nbsp;
+                    <small lang="en" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Coming soon</small>
+                    <small lang="de" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Bald verfügbar</small>
                 </a>
             </div>
             <div style="margin-top: 1rem; text-align: center;">
