--- a/src/index.html
+++ b/src/index.html
@@ -284,6 +284,10 @@
           <button @click="active = 'referral-code'; window.innerWidth < 1024 ? menuOpen = false : null" :class="{ 'active': active === 'referral-code' }">
             <img src="images/share.png" alt="Share" style="height: 18px; vertical-align: middle; margin-right: 5px;"> <span x-text="$store.strings?.menu_share || 'Share'"></span>
           </button>
+          <!-- Play Store Link - nur in Web-App anzeigen (nicht in Android oder iOS) -->
+          <a x-show="!$store.isAndroidApp() && !$store.isIOSApp()" href="https://play.google.com/store/apps/details?id=eu.lalumo.app" target="_blank" class="menu-button">
+            <img src="images/play-store.png" alt="Play Store" style="height: 18px; vertical-align: middle; margin-right: 5px;"> <span x-text="$store.strings?.menu_play_store || 'Play Store'"></span>
+          </a>
         </div>
       </div>
     </div>
