update Play Store integration with new icons and standardize download buttons across web app and homepage

--- a/homepage/index-template.html
+++ b/homepage/index-template.html
@@ -581,12 +581,16 @@
                     <small lang="de" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Bald verfügbar</small>
                 </a>
                 <a href="https://play.google.com/store/apps/details?id=com.lalumo.app" class="download-btn">
-                    🤖 Google Play Store
+                    <img src="images/playstore.png" alt="Google Play Store" style="height: 20px; margin-right: 6px; vertical-align: middle;"> Google Play Store
                 </a>
                 <a href="https://f-droid.org/packages/com.lalumo.app" class="download-btn">
                     <img src="https://fdroid.gitlab.io/artwork/badge/get-it-on.png" alt="F-Droid" style="height: 20px; margin-right: 6px; vertical-align: middle;">F-Droid&nbsp;
                     <small lang="en" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Coming soon</small>
                     <small lang="de" style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Bald verfügbar</small>
+                </a>
+                <a href="/app/" class="download-btn">
+                    🎵 <span lang="en">Web App</span>
+                    <span lang="de">Web-App</span>
                 </a>
             </div>
             <div style="margin-top: 1rem; text-align: center;">
@@ -725,7 +729,7 @@
                 <a href="/de/impressum.html" lang="de">Impressum</a>
                 <a href="/privacy.html" lang="en">Privacy Policy</a>
                 <a href="/de/datenschutz.html" lang="de">Datenschutz</a>
-                <a href="/terms.html" lang="en">Terms</a>
+                <a href="/agb.html" lang="en">Terms</a>
                 <a href="/de/agb.html" lang="de">AGB</a>
                 <a href="https://github.com/rubo77/Lalumo">GitHub</a>
                 <a href="https://f-droid.org/packages/com.lalumo.app">F-Droid</a>
@@ -738,14 +742,7 @@
             <div class="footer-copyright">
                 <p lang="en">&copy; 2024 Lalumo. All rights reserved.</p>
                 <p lang="de">&copy; 2024 Lalumo. Alle Rechte vorbehalten.</p>
-                <p style="margin-top: 0.5rem;">
-                    <a href="/app/" style="color: var(--accent-color); text-decoration: none;" lang="en">
-                        🎵 To Web App
-                    </a>
-                    <a href="/app/" style="color: var(--accent-color); text-decoration: none;" lang="de">
-                        🎵 Zur Web-App
-                    </a>
-                </p>
+
             </div>
         </div>
     </footer>
