--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
           </button>
           <!-- Play Store Link - nur in Web-App anzeigen (nicht in Android oder iOS) -->
           <a x-show="!$store.isAndroidApp() && !$store.isIOSApp()" href="https://play.google.com/store/apps/details?id=eu.lalumo.app" target="_blank" class="menu-button">
-            <img src="images/play-store.png" alt="Play Store" style="height: 18px; vertical-align: middle; margin-right: 5px;"> <span x-text="$store.strings?.menu_play_store || 'Play Store'"></span>
+            <img src="images/get_on_playstore.png" alt="Play Store" style="height: 45px; vertical-align: middle; margin-right: 5px;">
           </a>
         </div>
       </div>
