add webpack hot reload for HTML templates and fix app subfolder partial loading

--- a/homepage/index-template.html
+++ b/homepage/index-template.html
@@ -727,12 +727,11 @@
             <div class="footer-legal">
                 <a href="/impressum.html" lang="en">Imprint</a>
                 <a href="/de/impressum.html" lang="de">Impressum</a>
-                <a href="/privacy.html" lang="en">Privacy Policy</a>
+                <a href="/datenschutz.html" lang="en">Privacy Policy</a>
                 <a href="/de/datenschutz.html" lang="de">Datenschutz</a>
                 <a href="/agb.html" lang="en">Terms</a>
                 <a href="/de/agb.html" lang="de">AGB</a>
                 <a href="https://github.com/rubo77/Lalumo">GitHub</a>
-                <a href="https://f-droid.org/packages/com.lalumo.app">F-Droid</a>
             </div>
             <div class="footer-links">
                 <a href="mailto:lalumo-support@it.z11.de" class="footer-link" lang="en">Contact</a>
@@ -740,8 +739,8 @@
             </div>
             
             <div class="footer-copyright">
-                <p lang="en">&copy; 2024 Lalumo. All rights reserved.</p>
-                <p lang="de">&copy; 2024 Lalumo. Alle Rechte vorbehalten.</p>
+                <p lang="en">&copy; 2025 Eastcoast Laboratories. All rights reserved.</p>
+                <p lang="de">&copy; 2025 Eastcoast Laboratories. Alle Rechte vorbehalten.</p>
 
             </div>
         </div>
