--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="192x192" href="./icons/icon-192.png" />
   <link rel="icon" type="image/png" sizes="512x512" href="./icons/icon-512.png" />
+  <!-- Native App Detector - Setzt das window.isNativeApp Flag für zuverlässige App-Erkennung -->
+  <script src="native-app-detector.js"></script>
   <style>
     /* Critical CSS for initial rendering */
     body {
