2_4: WIP - add free play mode

--- a/src/index.html
+++ b/src/index.html
@@ -520,7 +520,7 @@
               </button>
               <div class="melody-name" x-show="currentMelodyName" x-text="currentMelodyName"></div>
               <!-- Next melody button -->
-              <button class="next-melody-button" @click="playMelodyForSoundHighOrLow(true)" aria-label="Next melody" title="Next melody">
+              <button class="next-melody-button" @click="playMelody(true)" aria-label="Next melody" title="Next melody">
                 <span style="font-size: 18px;">⏭</span>
               </button>
             </div>
