--- a/src/index.html
+++ b/src/index.html
@@ -745,7 +745,7 @@
         <div id="2_2_chords_stable_instable" x-show="mode === '2_2_chords_stable_instable'" class="chord-activity activity-container lazyload-bg" data-background-image="./images/backgrounds/2_2_chords_stable_instable.png">
           
           <!-- Play button (shown in game mode) -->
-          <button @click="playStableInstableChord()" class="play-button" :title="$store.strings?.play_chord || 'Play Chord'">▶️</button>
+          <button @click="playStableInstableChord()" class="play-chord-2_2" :title="$store.strings?.play_chord || 'Play Chord'">▶️</button>
 
           <div class="chords-container">            
             <!-- Progress display -->
