2_": add progress tracking and debug logging for stable/instable chord activity

--- a/src/index.html
+++ b/src/index.html
@@ -756,11 +756,11 @@
             </div>
             
             <div class="button_2_2_grid">
-              <div id="button_2_2_stable" class="character" @click="checkStableInstableMatch('stable')">
+              <div id="button_2_2_stable" class="character" @click="checkStableInstableMatch('stable', $data)">
                 <div title="Stable">Stable</div>
               </div>
               
-              <div id="button_2_2_instable" class="character" @click="checkStableInstableMatch('instable')">
+              <div id="button_2_2_instable" class="character" @click="checkStableInstableMatch('instable', $data)">
                 <div title="Instable">Instable</div>
               </div>
             </div>
